# multiplatform-v2x-codecs

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dockerfile  Dockerfile-wasm  README.md  docker-compose-wasm.yml  docker-compose.yml  run.sh
custom/: VehicleEventFlags.c
site/: index.html  v2x.js
src/: convert.c  convert.h  main.c
